# aiogram_test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  project.env.dev  pyproject.toml
src/: database.py  forms.py  handlers.py  logging.py  scheduler.py  utils.py  weather.py
